--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@monaco-editor/react": "^4.5.1",
     "add": "^2.0.6",
     "crypto-js": "^4.1.1",
+    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "yarn": "^1.22.19",
