--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-p5": "^1.3.35",
     "yarn": "^1.22.19",
     "zod": "^3.21.4"
   },
