--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@mantine/form": "^6.0.11",
     "@monaco-editor/react": "^4.5.1",
+    "@rjsf/core": "^5.7.3",
+    "@rjsf/utils": "^5.7.3",
+    "@rjsf/validator-ajv8": "^5.7.3",
     "add": "^2.0.6",
     "crypto-js": "^4.1.1",
     "framer-motion": "^10.12.16",
