--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/form": "^6.0.11",
+    "@mantine/hooks": "^6.0.13",
     "@monaco-editor/react": "^4.5.1",
     "@rjsf/core": "^5.7.3",
     "@rjsf/utils": "^5.7.3",
